--- a/Overtime/Views/Login/Index.cshtml
+++ b/Overtime/Views/Login/Index.cshtml
@@ -44,25 +44,29 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-5">
                             <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                <div class="card-header" style="background-color:#21355C"><h3 class="text-center  text-light font-weight-light my-4">Login</h3></div>
+                                <div class="card-header" style="background-color:#21355C">
+                                    <h2 class="text-center  text-secondary font-weight-bolder my-4">Overtime</h2>
+
+                                    <h3 class="text-center  text-light font-weight-light my-4">Login</h3>
+                                </div>
                                 <div class="card-body" style="background-color:#21355C">
                                     <form asp-action="Login" autocomplete="off">
                                         <div asp-validation-summary="ModelOnly" class="text-light"></div>
                                         <div class="form-group">
                                             <label asp-for="u_name" class="small mb-1 text-light"></label>
-                                            <input asp-for="u_name" class="form-control py-4" placeholder="Enter Username" autocomplete="nope" />
+                                            <input asp-for="u_name" class="form-control py-4" placeholder="Enter Username" autocomplete="nope" required />
                                             <span asp-validation-for="u_name" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
                                             <label asp-for="u_password" class="small text-light mb-1"></label>
-                                            <input asp-for="u_password" class="form-control py-4" type="password" autocomplete="false" />
+                                            <input asp-for="u_password" class="form-control py-4" type="password" autocomplete="false" required />
                                             <span asp-validation-for="u_password" class="text-danger"></span>
                                         </div>
                                         <div class="form-group align-items-end justify-content-between mt-4 mb-0">
                                             <input type="submit" value="Login" class="btn btn-primary" />
                                         </div>
                                         <div class="form-group align-items-end justify-content-between mt-4 mb-0">
-                                            <label class="text-center  text-light font-weight-light my-4">@ViewBag.Message</label>
+                                            <label class="text-center  text-danger glyphicon-bold my-4">@ViewBag.Message</label>
                                         </div>
 
                                     </form>
