--- a/Overtime/Views/Food/FeedbackReport.cshtml
+++ b/Overtime/Views/Food/FeedbackReport.cshtml
@@ -18,9 +18,8 @@
                 </div>
                 <div class="col-md-3">
                     <div class="form-group">
-                        <div class="form-group">
-                            <input id="c_date1" type="date" class="form-control" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc; width: 100%" />
-                        </div>
+                        <label class="control-label">Date Range</label>
+                        <input id="reportrange" class="form-control" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc; width: 100%" />
                     </div>
                 </div>
                 <div class="col-md-1">
